# monorepo_aws-project

./: .gitignore  README.rst  todo.rst
bootstrap/: README.rst  c1_teardown_cross_account_permission.py  (+16 more)
projects/simple_lambda-project/: .coveragerc  chore.txt  poetry-lock-hash.json  pyproject.toml  requirements-automation.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt
projects/simple_lambda-project/bootstrap/: README-CN.rst  du-config.json
projects/simple_lambda-project/cdk/: app.py
projects/simple_lambda-project/config/: config.json  deploy_parameters.py
projects/simple_lambda-project/docs/source/: conf.py
projects/simple_lambda-project/docs/source/01-Developer-Guide-CN/01-About-This-Project-CN/: index.rst
projects/simple_lambda-project/docs/source/01-Developer-Guide-CN/02-Software-Development-Life-Cycle-CN/: index.rst
projects/simple_lambda-project/docs/source/01-Developer-Guide-CN/03-Semantic-Git-Branching-Strategy-CN/: index.rst
projects/simple_lambda-project/docs/source/01-Developer-Guide-CN/05-Centralized-Multi-Env-Config-Management-CN/: index.rst
projects/simple_lambda-project/docs/source/01-Developer-Guide-CN/06-Manage-Blue-Green-or-Canary-Deployment-and-Rollback-CN/: index.rst
projects/simple_lambda-project/docs/source/01-Developer-Guide-CN/08-CDK-Development-Best-Practice-CN/: index.rst
projects/simple_lambda-project/docs/source/01-Developer-Guide-CN/09-Lambda/: index.rst
projects/simple_lambda-project/docs/source/01-Developer-Guide/02-Manage-Blue-Green-or-Canary-Deployment-and-Rollback/: index.rst
projects/simple_lambda-project/docs/source/01-Developer-Guide/02-Semantic-Git-Branching-Strategy/: index.rst
projects/simple_lambda-project/docs/source/01-Developer-Guide/04-Centralized-Multi-Env-Config-Management/: index.rst
projects/simple_lambda-project/docs/source/01-Developer-Guide/05-Infrastructure-as-Code/: index.rst
projects/simple_lambda-project/docs/source/simple_lambda/: __init__.rst  compat.rst
projects/simple_lambda-project/docs/source/simple_lambda/config/: __init__.rst  init.rst
projects/simple_lambda-project/docs/source/simple_lambda/ops/: __init__.rst  build.rst  deploy.rst  docs.rst  pyproject.rst  tests.rst
projects/simple_lambda-project/simple_lambda/: _api.py  boto_ses.py  env.py  git.py  logger.py  ops.py  paths.py  pyproject.py  runtime.py
projects/simple_lambda-project/simple_lambda/config/: backup.py  init.py  load.py
projects/simple_lambda-project/simple_lambda/config/define/: __init__.py  api.py  app.py  deploy.py  lbd_func.py  main.py  name.py
projects/simple_lambda-project/simple_lambda/iac/define/: iam.py  lbd.py  main.py
projects/simple_lambda-project/simple_lambda/lbd/: hello.py  s3sync.py
projects/simple_lambda-project/simple_lambda/ops/: __init__.py  build.py  deploy.py  docs.py  pyproject.py  tests.py
projects/simple_lambda-project/simple_lambda/tests/: boto_ses.py
projects/simple_lambda-project/tests/: test_boto_ses.py  test_env.py  test_git.py
projects/simple_lambda-project/tests/config/: test_config_init.py  test_config_load.py
projects/simple_lambda-project/tests/iac/: test_iac_define.py
projects/simple_lambda-project/tests/lbd/: test_lbd_s3sync.py
projects/simple_lambda-project/tests_int/iac/: test_iac_exports.py
projects/simple_lambda-project/tests_int/lbd/: test_lbd_hello.py  test_lbd_s3sync.py
(+590 files in other folders)
